--- a/osu.Android/osu.Android.csproj
+++ b/osu.Android/osu.Android.csproj
@@ -5,11 +5,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>osu.Android</RootNamespace>
     <AssemblyName>osu.Android</AssemblyName>
-    <!-- Versão dinâmica baseada na data/hora do build -->
-    <!-- Versão legível baseada na data/hora -->
-    <Version>$([System.DateTime]::Now.ToString("yy.MM.dd.HHmm"))</Version>
-    <!-- VersionCode numérico incremental (para updates) -->
-    <ApplicationVersion>$([System.DateTime]::Now.ToString("yyMMdd"))</ApplicationVersion>
+    <Version>0.0.0</Version>
+    <ApplicationVersion Condition=" '$(ApplicationVersion)' == '' ">1</ApplicationVersion>
     <ApplicationDisplayVersion Condition=" '$(ApplicationDisplayVersion)' == '' ">$(Version)</ApplicationDisplayVersion>
   </PropertyGroup>
   <ItemGroup>
